World Tool: - Scrolling now only changes layers if hovering over the canvas - Fixed toolbar overflow being hidden - Block commands now have "title" property - Data fields now have default values
Game:
- Block commands now have "title" & "command" properties
- Added optional hover text for command blocks
- Fixed title messages blocking menu interactions

--- a/game/public/client/main.css
+++ b/game/public/client/main.css
@@ -70,7 +70,6 @@ Canvas
 	image-rendering: pixelated;
 	image-rendering: crisp-edges;
 }
-
 #hud-canvas {
 	pointer-events: none;
 }
@@ -250,6 +249,7 @@ Chat Styles
 	height: 80%;
 	font-size: 10vh;
 	text-align: center;
+	pointer-events: none;
 }
 
 /* ============================================
